<resources>
    <string name="app_name">Calendar</string>
    <string name="monday">MON</string>
    <string name="tuesday">TUE</string>
    <string name="wednesday">WED</string>
    <string name="thursday">THU</string>
    <string name="friday">FRI</string>
    <string name="saturday">SAT</string>
    <string name="sunday">SUN</string>
    <string name="next_day_button">Next Day</string>
    <string name="previous_day_button">Previous Day</string>
    <string name="date_display_today_button">Go to today</string>
</resources>