<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyCalendar">

    <LinearLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/calendar_prev_button"
            android:layout_width="70dp"
            android:layout_height="250dp"
            android:contentDescription="@string/previous_day_button"
            android:src="@drawable/left_arrow" />

        <!-- date title -->
        <LinearLayout
            android:id="@+id/date_display"
            android:layout_width="200dp"
            android:layout_height="250dp"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:orientation="vertical">


            <TextView
                android:id="@+id/date_display_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textAppearance="@android:style/TextAppearance.Holo.Medium"
                android:textSize="30sp"
                android:textStyle="normal"
                tools:text="2018" />

            <TextView
                android:id="@+id/date_display_month"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textAppearance="@android:style/TextAppearance.Holo.Medium"
                android:textSize="25sp"
                android:textStyle="normal"
                tools:text="January" />

            <TextView
                android:id="@+id/date_display_date"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:gravity="center"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textSize="55sp"
                android:textStyle="bold"
                tools:text="17" />
            <!-- date title -->
            <TextView
                android:id="@+id/date_display_day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textSize="30sp"
                tools:text="Saturday" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/date_display_today"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/background"
                    android:padding="5dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/date_display_today_button"
                    android:textAlignment="center"
                    android:textSize="20sp" />
            </RelativeLayout>

        </LinearLayout>

        <ImageView
            android:id="@+id/calendar_next_button"
            android:layout_width="70dp"
            android:layout_height="250dp"
            android:contentDescription="@string/next_day_button"
            android:src="@drawable/right_arrow" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/calendar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/relativeLayout"
        tools:layout_editor_absoluteX="20dp">

        <LinearLayout
            android:id="@+id/calendar_header"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/monday" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/tuesday" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/wednesday" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/thursday" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/friday" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/saturday" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/sunday" />
        </LinearLayout>

        <GridView
            android:id="@+id/calendar_grid"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contextClickable="true"
            android:numColumns="7"
            app:layout_constraintTop_toBottomOf="@+id/calendar_header" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendar"
        tools:layout_editor_absoluteX="20dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>